--- a/index.html
+++ b/index.html
@@ -39,9 +39,30 @@
                     <li><a href="#contact">Contact Us</a></li>
                 </div>
             </div>
+            <!-- Notification -->
+            <div class="notification">
+                <div class="notification-box tick">
+                    <i class='bx bxs-check-circle' ></i>
+                    <p>Congratulations, your game has been downloaded successfully.</p>
+                </div>
+                <div class="notification-box cross">
+                    <i class='bx bxs-x-circle' ></i>
+                    <p>Could not apply changes.</p>
+                </div>
+            </div>
         </div>
     </header>
-    
+
+    <!-- Home Selection Start -->
+    <section class="home container" id="home">
+        <img src="img/home.png" alt="">
+        <div class="home-text">
+            <h1>CITY OF THE <br> FUTURE</h1>
+            <a href="#" class="btn">Available now</a>
+        </div>
+    </section>
+    <!-- Home Selection End -->
+
     <!-- Link to JS -->
     <script src="js/index.js"></script>
 </body>
