--- a/index.html
+++ b/index.html
@@ -62,7 +62,18 @@
         </div>
     </section>
     <!-- Home Selection End -->
+    <!-- Trending Section Start -->
+    <section class="trending container" id="trending">
+        <div class="heading">
+            <i class='bx bxs-flame' ></i>
+            <h2>Trending Games</h2>
+        </div>
+        <!-- Content -->
+        <div class="trending-content">
 
+        </div>
+    </section>
+    <!-- Trending Section End -->
     <!-- Link to JS -->
     <script src="js/index.js"></script>
 </body>
