--- a/download.html
+++ b/download.html
@@ -58,17 +58,24 @@
     <div class="video-container container">
         <video src="/download-files/Subway Surfers Official.mp4" muted autoplay></video>
     </div>
-    <!-- Copyright -->
-    <div class="copyright container">
-        <a href="#" class="logo">
-            Game<span>Store</span>
-        </a>
-        <p>&#169; RainbowHell All Right Reserved</p>
+    <!-- About -->
+    <div class="about container">
+        <h2>About Game</h2>
+        <p>There are plenty of examples of this kind of games on mobile devices.</p>
     </div>
-    <!-- Copyright End -->
-    <!-- Link swiper file -->
-    <script src="js/swiper-bundle.min.js"></script>
-    <!-- Link to JS -->
-    <script src="js/index.js"></script>
+    <section>
+        <!-- Copyright -->
+        <div class="copyright container">
+            <a href="#" class="logo">
+                Game<span>Store</span>
+            </a>
+            <p>&#169; RainbowHell All Right Reserved</p>
+        </div>
+        <!-- Copyright End -->
+        <!-- Link swiper file -->
+        <script src="js/swiper-bundle.min.js"></script>
+        <!-- Link to JS -->
+        <script src="js/index.js"></script>
+    </section>
 </body>
 </html>
