Header / slider style modification

--- a/download.html
+++ b/download.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,22 +15,23 @@
     <!-- Swiper CSS file link -->
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
 </head>
+
 <body>
     <!-- Custom Scroll Bar -->
     <div class="progress">
         <div class="progress-bar" id="scroll-bar">
-            
+
         </div>
     </div>
     <header>
         <!-- Nav -->
         <div class="nav container">
             <!-- Logo -->
-            <a href="index.html" class="logo">Game<span>Store</span></a>
+            <a href="index.html" class="logo">Fabulous<span>Games</span></a>
             <!-- Nav Icons -->
             <div class="nav-icons">
                 <i class='bx bx-bell bx-tada' id="bell-icon"><span></span></i>
-                <i class='bx bxs-download' ></i>
+                <i class='bx bxs-download'></i>
                 <div class="menu-icon">
                     <div class="line1"></div>
                     <div class="line2"></div>
@@ -50,11 +52,11 @@
             <!-- Notification -->
             <div class="notification">
                 <div class="notification-box tick">
-                    <i class='bx bxs-check-circle' ></i>
+                    <i class='bx bxs-check-circle'></i>
                     <p>Congratulations, your game has been downloaded successfully.</p>
                 </div>
                 <div class="notification-box cross">
-                    <i class='bx bxs-x-circle' ></i>
+                    <i class='bx bxs-x-circle'></i>
                     <p>Could not apply changes.</p>
                 </div>
             </div>
@@ -62,7 +64,7 @@
     </header>
     <!-- Video -->
     <div class="video-container container">
-        <video src="/download-files/Subway Surfers Official.mp4" muted autoplay></video>
+        <video autoplay muted loop><source src='download-files/Subway Surfers Official.mp4' type='video/mp4' codecs="mp4v.20.8, mp4a.40.2"></video>
     </div>
     <!-- About -->
     <div class="about container">
@@ -92,7 +94,7 @@
         <!-- Copyright -->
         <div class="copyright container">
             <a href="#" class="logo">
-                Game<span>Store</span>
+                Fabulous<span>Games</span>
             </a>
             <p>&#169; RainbowHell All Right Reserved</p>
         </div>
@@ -103,4 +105,5 @@
         <script src="js/index.js"></script>
     </section>
 </body>
+
 </html>
