--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <a href="index.html" class="logo">Fabulous<span>Games</span></a>
             <!-- Nav Icons -->
             <div class="nav-icons">
+                <div id="percentage">0%</div>
                 <i class='bx bx-bell bx-tada' id="bell-icon"><span></span></i>
                 <i class='bx bxs-download'></i>
                 <div class="menu-icon">
